# ai2ia

./: CONTRIBUTING.md  Cargo.toml  README.md  ai2ia-mockup.html  package.json  stats_data.json  tauri.conf.json
.github/workflows/: release.yml  update-stats.yml
docs/ar/: README.md
docs/de/: README.md
docs/fr/: README.md
docs/it/: README.md
docs/ja/: README.md
docs/ru/: README.md
icons/: icon.icns
res/: index-ar.html  index.html
res/css/: rtl.css  style.css
res/js/: ai-send.js  api-keys.js  i18n.js  ui.js
scripts/: fetch_stats.py  generate_stats_graph.py  pre-release-check.sh  update_readme_stats.py
src/: commands.rs  lib.rs  main.rs
src/modules/: ai_client.rs  api_keys.rs  mod.rs
